# DPM

./: .gitignore  Cargo.toml  README.md  temp.txt
.cargo/: config
.github/workflows/: rust.yml
src/: action.rs  arch.rs  cli_parse.rs  config.rs  error.rs  lib.rs  main.rs  repo.rs
src/utils/: db.rs  error.rs  json_parse.rs  mod.rs  system.rs
tests/: db_tests.rs
