[package]
name = "DPM"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dpm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.6"
clap = { version = "4.4.18", features = ["cargo", "color"] }
clap_complete = "4.4.9"
colored = "2.1.0"
digest = "0.10.7"
flate2 = "1.0.28"
futures-util = "0.3.30"
git2 = "0.18.1"
hex = "0.4.3"
libc = "0.2.153"
reqwest = { version = "0.11.23", features = ["json", "stream"] }
rusqlite = "0.31.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
sha2 = "0.10.8"
tokio = { version = "1.35.1", features = ["full"] }
walkdir = "2.4.0"
zip = "0.6.6"
